--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,3 +27,5 @@ jobs:
     - run: npm install
     - run: npm test
     - run: npm run build
+    - name: docker_test
+      run: docker build -t abdelidocker/nginx:latest .
