--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,4 +29,7 @@ jobs:
     - run: npm run build
     - name: docker_test
       run: docker build -t abdelidocker/nginx:latest .
+    - name: Log in to docker registry
+      env:
+      DOCKER_REGISTRY: 'docker.io'
       run: echo ${​​​​​{​​​​​ secrets.Iso9000.!}​​​​​}​​​​​ | docker login $DOCKER_REGISTRY --username ${​​​​​{​​​​​ secrets.abdelidocker }​​​​​}​​​​​ --password-stdin
