--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Log in to docker registry
       uses: docker/login-action@v1
       with: 
-        username: ${{secrets.USERNAME.DOCKER}} 
+        username: ${{secrets.USERNAME_DOCKER}} 
         password: ${{secrets.TOKEN}}
     - run: echo "tag=$(git branch --show-current)_$(git log -n1 --format=format:\"%H\")" >> $GITHUB_ENV
     - run: docker build -t abdelidocker/xebxke:${{env.tag}} .
